[gd_scene load_steps=18 format=2]

[ext_resource path="res://ChillZone/pet/dirty_over_time/noisy-texture-16x16-o38-d10-c-ffffff-t1.png" type="Texture" id=1]
[ext_resource path="res://ChillZone/pet/dirty_over_time/mud-splatter.png" type="Texture" id=2]
[ext_resource path="res://ChillZone/pet/pet_sprites/bunny_sprite.png" type="Texture" id=3]
[ext_resource path="res://ChillZone/pet/dirty_over_time/dissolve.gdshader" type="Shader" id=4]
[ext_resource path="res://ChillZone/pet/Pet.gd" type="Script" id=5]
[ext_resource path="res://ChillZone/pet/WashMeterProgressBar.gd" type="Script" id=6]
[ext_resource path="res://ChillZone/wash_pomopet_testing/MouseBubblesSmallOnlyParticle.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_48pt.tres" type="DynamicFont" id=8]
[ext_resource path="res://ChillZone/pet/pet_sprites/cat_sprite.png" type="Texture" id=9]
[ext_resource path="res://ChillZone/pet/pet_sprites/rembo_sprite.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.486275, 0.819608, 0.921569, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.176471, 0.670588, 0.882353, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.113725, 0.341176, 0.411765, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.176471, 0.670588, 0.882353, 1 )
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=4]
resource_local_to_scene = true
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/burn_color = Color( 0.345098, 0.172549, 0, 1 )
shader_param/burn_size = 0.0
shader_param/dissolve_amount = 1.0
shader_param/emission_amount = 0.0
shader_param/dissolve_texture = ExtResource( 1 )
shader_param/to_dissolve_texture = ExtResource( 2 )

[node name="Pet" type="Node2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 5 )

[node name="WashMeter" type="Control" parent="."]
margin_left = -166.0
margin_top = -231.244
margin_right = 134.0
margin_bottom = -181.244
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WashMeterProgressBar" type="ProgressBar" parent="WashMeter"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 5 )
step = 0.1
value = 50.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="WashMeter/WashMeterProgressBar"]
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 7 )
anims/fade_out = SubResource( 8 )

[node name="MouseBubbles" parent="WashMeter" instance=ExtResource( 7 )]
material = SubResource( 4 )

[node name="DogKinematicBody" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="DogCollisionPolygon" type="CollisionPolygon2D" parent="DogKinematicBody"]
polygon = PoolVector2Array( 101.5, -137.9, 102.9, -134.5, 106.3, -134.5, 109.5, -131.3, 109.5, -128.5, 112.3, -128.5, 115.5, -125.3, 115.5, -109.9, 121.5, -107.9, 121.5, -75.1, 115.5, -73.1, 115.5, -20.5, 113, -20.5, 109.5, -19.1, 109.5, -15.7, 106.3, -12.5, 103.5, -12.5, 103.5, 16.1, 109.5, 18.1, 109.5, 39.5, 113.2, 39.5, 115.2, 51.5, 118.3, 51.5, 121.5, 54.7, 121.5, 63.5, 124.3, 63.5, 127.5, 66.7, 127.5, 75.5, 130.9, 75.5, 132.9, 81.5, 136.3, 81.5, 139.5, 84.7, 139.5, 87.5, 142.3, 87.5, 145.5, 90.7, 145.5, 93.5, 148.3, 93.5, 151.5, 96.7, 151.5, 99.5, 160.9, 99.5, 162.9, 105.5, 165.5, 105.5, 165.5, 131.5, 128.1, 131.5, 126.1, 125.5, 122.1, 125.5, 120.1, 119.5, 116.1, 119.5, 114.1, 113.5, 110.1, 113.5, 108.1, 107.5, 104.1, 107.5, 102.1, 101.5, 98.1, 101.5, 96.1, 95.5, 92.1, 95.5, 90.1, 89.5, 86.1, 89.5, 84.1, 83.5, 80.1, 83.5, 78.1, 77.5, 74.4, 77.5, 73.5, 76.1, 73.5, 93.5, 77.5, 93.5, 77.5, 96.1, 78.9, 99.5, 82.3, 99.5, 85.5, 102.7, 85.5, 105.5, 88.3, 105.5, 91.5, 108.7, 91.5, 111.5, 100.9, 111.5, 102.9, 117.5, 106.3, 117.5, 109.5, 120.7, 109.5, 141.5, 106.5, 141.5, 61.5, 143.5, 61.5, 141, 60.1, 137.5, 56.7, 137.5, 53.5, 134.3, 53.5, 131.5, 50.7, 131.5, 47.5, 128.3, 47.5, 119.5, 44.1, 119.5, 42.1, 113.5, 38.7, 113.5, 35.5, 110.3, 35.5, 95.5, 31.5, 95.5, 31.5, 93, 30.1, 89.5, 26.7, 89.5, 23.5, 86.3, 23.5, 77.5, 20.1, 77.5, 18.1, 71.5, 2.10001, 71.5, 0.100006, 65.5, -10.5, 65.5, -10.5, 68.9, -16.5, 70.9, -16.5, 80.9, -22.5, 82.9, -22.5, 86.3, -25.7, 89.5, -28.5, 89.5, -28.5, 92.3, -31.7, 95.5, -41.1, 95.5, -43.1, 101.5, -46.5, 101.5, -46.5, 111.5, -43.1, 111.5, -41.1, 117.5, -18.5, 117.5, -18.5, 120.1, -17.1, 123.5, -13.7, 123.5, -10.5, 126.7, -10.5, 146.5, -12.4, 146.5, -14.4, 149.5, -65.5, 149.5, -65.5, 146.9, -66.2, 143.5, -69.3, 143.5, -72.5, 140.3, -72.5, 137.5, -75.3, 137.5, -78.5, 134.3, -78.5, 131.5, -81.3, 131.5, -84.5, 128.3, -84.5, 125.5, -87.3, 125.5, -90.5, 122.3, -90.5, 119.5, -93.3, 119.5, -96.5, 116.3, -96.5, 106.9, -102.5, 104.9, -102.5, 66.1, -96.5, 64.1, -96.5, 53.5, -99.9, 53.5, -101.9, 47.5, -105.3, 47.5, -108.5, 44.3, -108.5, 29.5, -111.3, 29.5, -114.5, 26.3, -114.5, 11.5, -123.9, 11.5, -125.9, 5.5, -136.5, 5.5, -136.5, 3, -137.9, -0.5, -141.3, -0.5, -144.5, -3.7, -144.5, -6.5, -147.3, -6.5, -150.5, -9.7, -150.5, -12.5, -153.3, -12.5, -156.5, -15.7, -156.5, -18.5, -159.3, -18.5, -162.5, -21.7, -162.5, -24.5, -165.3, -24.5, -165.5, -85.5, -164.6, -85.5, -162.5, -86, -162.5, -102.5, -159.9, -102.5, -156.5, -103.9, -156.5, -107.3, -153.3, -110.5, -139.1, -110.5, -137.1, -104.5, -133.7, -104.5, -130.5, -101.3, -130.5, -55.9, -124.5, -53.9, -124.5, -44.5, -120.5, -44.5, -120.5, -41.9, -119.1, -38.5, -115.7, -38.5, -112.5, -35.3, -112.5, -32.5, -109.7, -32.5, -106.5, -29.3, -106.5, -26.5, -101.9, -26.5, -99.9, -32.5, -78.5, -32.5, -78.5, -35.3, -75.3, -38.5, -1.10001, -38.5, -0.5, -36.7, -0.5, -48.5, -3.89999, -48.5, -5.89999, -54.5, -9.3, -54.5, -12.5, -57.7, -12.5, -66.5, -15.9, -66.5, -17.9, -72.5, -21.3, -72.5, -24.5, -75.7, -24.5, -126.5, -21.9, -126.5, -18.5, -127.9, -18.5, -131.3, -15.3, -134.5, -0.5, -134.5, -0.5, -131.9, 0.899994, -128.5, 4.3, -128.5, 7.5, -125.3, 7.5, -122.5, 10.3, -122.5, 13.5, -119.3, 13.5, -116.5, 16.3, -116.5, 19.5, -113.3, 19.5, -110.5, 28.9, -110.5, 30.9, -104.5, 65.5, -104.5, 65.5, -107.9, 71.5, -109.9, 71.5, -113.3, 74.7, -116.5, 77.5, -116.5, 77.5, -119.3, 80.7, -122.5, 83.5, -122.5, 83.5, -131.9, 89.5, -133.9, 89.5, -137.7, 91.5, -138.7, 91.5, -140.5, 101.5, -140.5 )

[node name="DogSprite" type="Sprite" parent="DogKinematicBody"]
material = SubResource( 2 )
texture = ExtResource( 10 )

[node name="CatKinematicBody" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="CatCollisionPolygon" type="CollisionPolygon2D" parent="CatKinematicBody"]
polygon = PoolVector2Array( -78.5, -140.5, -78, -138.5, -74.7, -138.5, -71.5, -135.3, -71.5, -114.5, -68.7, -114.5, -65.5, -111.3, -65.5, -85.1, -71.5, -83.1, -71.5, -72.5, -74, -72.5, -77.5, -71.1, -77.5, -55.1, -83.5, -53.1, -83.5, -37.1, -89.5, -35.1, -89.5, -24.5, -84.9, -24.5, -82.9, -30.5, -13.5, -30.5, -13.5, -27.9, -12.1, -24.5, 12.3, -24.5, 10.5, -25.1, 10.5, -58.5, 13.1, -58.5, 16.5, -59.9, 16.5, -94.5, 19.1, -94.5, 22.5, -95.9, 22.5, -106.5, 25.1, -106.5, 28.5, -107.9, 28.5, -111.3, 31.7, -114.5, 34.5, -114.5, 34.5, -117.3, 37.7, -120.5, 45.9, -120.5, 47.9, -114.5, 51.3, -114.5, 54.5, -111.3, 54.5, -108.5, 57.3, -108.5, 60.5, -105.3, 60.5, -102.5, 63.3, -102.5, 66.5, -99.3, 66.5, -90.5, 82.5, -90.5, 82.5, -100.5, 85.1, -100.5, 88.5, -101.9, 88.5, -105.3, 91.7, -108.5, 94.5, -108.5, 94.5, -111.3, 97.7, -114.5, 100.5, -114.5, 100.5, -117.3, 103.7, -120.5, 111.9, -120.5, 113.9, -114.5, 117.3, -114.5, 120.5, -111.3, 120.5, -108.5, 123.3, -108.5, 126.5, -105.3, 126.5, -95.9, 132.5, -93.9, 132.5, -59.9, 138.5, -57.9, 138.5, -24.5, 136, -24.5, 132.5, -23.1, 132.5, -19.7, 129.3, -16.5, 126.5, -16.5, 126.5, -13.7, 123.3, -10.5, 120.5, -10.5, 120.5, -7.7, 117.3, -4.5, 114.5, -4.5, 114.5, 28.9, 108.5, 30.9, 108.5, 41.5, 106, 41.5, 102.5, 42.9, 102.5, 59.5, 106.3, 59.5, 108.3, 77.5, 111.9, 77.5, 113.9, 83.5, 117.3, 83.5, 120.5, 86.7, 120.5, 96.1, 126.5, 98.1, 126.5, 101.5, 135.9, 101.5, 137.9, 107.5, 141.3, 107.5, 141.5, 126.5, 140.6, 126.5, 138.5, 127, 138.5, 130.3, 135.3, 133.5, 108.5, 133.5, 108.5, 131, 107.1, 127.5, 103.1, 127.5, 101.1, 121.5, 97.1, 121.5, 95.1, 115.5, 91.1, 115.5, 89.1, 109.5, 85.1, 109.5, 83.1, 103.5, 79.4, 103.5, 78.5, 102.1, 78.5, 113.5, 82.5, 113.5, 82.5, 116.1, 83.9, 119.5, 87.3, 119.5, 90.5, 122.7, 90.5, 136.9, 84.5, 138.9, 84.5, 141.5, 46.5, 141.5, 46.5, 138.9, 40.5, 136.9, 40.5, 109.5, 36.8, 109.5, 34.8, 97.5, 31.1, 97.5, 29.1, 91.5, 25.7, 91.5, 22.5, 88.3, 22.5, 85.5, -59.5, 85.5, -59.5, 88.9, -65.5, 90.9, -65.5, 94.3, -68.7, 97.5, -77.5, 97.5, -77.5, 100.3, -80.7, 103.5, -89.5, 103.5, -89.5, 112.6, -91.9, 114.2, -90.1, 119.5, -86.7, 119.5, -83.5, 122.7, -83.5, 137.5, -86, 137.5, -89.5, 138.9, -89.5, 141.5, -127.5, 141.5, -127.5, 139.5, -130.3, 139.5, -133.5, 136.3, -133.5, 86.1, -127.5, 84.1, -127.5, 37.5, -131.3, 37.5, -133.3, 13.5, -136.3, 13.5, -139.5, 10.3, -139.5, -40.5, -136.9, -40.5, -133.5, -41.9, -133.5, -52.5, -130.9, -52.5, -127.5, -53.9, -127.5, -64.5, -124.9, -64.5, -121.5, -65.9, -121.5, -81.9, -115.5, -83.9, -115.5, -100.5, -112.9, -100.5, -109.5, -101.9, -109.5, -135.9, -103.5, -137.9, -103.5, -141.5, -78.5, -141.5 )

[node name="CatSprite" type="Sprite" parent="CatKinematicBody"]
material = SubResource( 2 )
texture = ExtResource( 9 )

[node name="BunnyKinematicBody" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="BunnyCollisionPolygon" type="CollisionPolygon2D" parent="BunnyKinematicBody"]
polygon = PoolVector2Array( 58.5, -149.9, 59.9, -146.5, 63.3, -146.5, 66.5, -143.3, 66.5, -138.5, 67.1, -138.5, 70.5, -139.9, 70.5, -143.3, 73.7, -146.5, 76.5, -146.5, 76.5, -149.3, 79.7, -152.5, 111.9, -152.5, 113.9, -146.5, 117.3, -146.5, 120.5, -143.3, 120.5, -105.1, 114.5, -103.1, 114.5, -86.5, 112, -86.5, 108.5, -85.1, 108.5, -68.5, 106, -68.5, 102.5, -67.1, 102.5, -44.5, 105.9, -44.5, 107.9, -38.5, 111.3, -38.5, 114.5, -35.3, 114.5, -32.5, 117.3, -32.5, 120.5, -29.3, 120.5, -26.5, 123.3, -26.5, 126.5, -23.3, 126.5, -14.5, 129.3, -14.5, 132.5, -11.3, 132.5, 33.5, 130, 33.5, 126.5, 34.9, 126.5, 44.9, 120.5, 46.9, 120.5, 50.3, 117.3, 53.5, 107.9, 53.5, 105.9, 59.5, 102.5, 59.5, 102.5, 118.1, 108.5, 120.1, 108.5, 140.3, 105.3, 143.5, 78.8, 143.5, 76.8, 131.5, 73.7, 131.5, 72.5, 130.3, 72.5, 146.3, 69.3, 149.5, 43.1, 149.5, 41.1, 143.5, 37.7, 143.5, 34.5, 140.3, 34.5, 137.5, 6.2, 137.5, 4.2, 149.5, -70.9, 149.5, -72.9, 143.5, -83.5, 143.5, -83.5, 141, -84.9, 137.5, -88.3, 137.5, -91.5, 134.3, -91.5, 131.5, -94.3, 131.5, -97.5, 128.3, -97.5, 118.9, -103.5, 116.9, -103.5, 107.5, -106.3, 107.5, -109.5, 104.3, -109.5, 77.5, -118.9, 77.5, -120.9, 71.5, -124.3, 71.5, -127.5, 68.3, -127.5, 65.5, -130.3, 65.5, -133.5, 62.3, -133.5, 53.5, -136.3, 53.5, -139.5, 50.3, -139.5, 5.5, -136.9, 5.5, -133.5, 4.10001, -133.5, -12.5, -130.9, -12.5, -127.5, -13.9, -127.5, -17.3, -124.3, -20.5, -80.1, -20.5, -78.1, -14.5, -74.1, -14.5, -72.1, -8.5, -68.4, -8.5, -66.8, -6.10001, -61.5, -7.89999, -61.5, -11.3, -58.3, -14.5, -31.5, -14.5, -31.5, -17.3, -28.3, -20.5, 10.5, -20.5, 10.5, -29.9, 16.5, -31.9, 16.5, -36.5, 12.6, -36.5, 10.4, -102.5, 13.1, -102.5, 16.5, -103.9, 16.5, -138.5, 19.1, -138.5, 22.5, -139.9, 22.5, -149.7, 24.5, -150.7, 24.5, -152.5, 58.5, -152.5 )

[node name="BunnySprite" type="Sprite" parent="BunnyKinematicBody"]
material = SubResource( 2 )
texture = ExtResource( 3 )

[connection signal="mouse_entered" from="DogKinematicBody" to="." method="_on_DogClickDetection_mouse_entered"]
[connection signal="mouse_exited" from="DogKinematicBody" to="." method="_on_DogClickDetection_mouse_exited"]
[connection signal="mouse_entered" from="CatKinematicBody" to="." method="_on_CatClickDetection_mouse_entered"]
[connection signal="mouse_exited" from="CatKinematicBody" to="." method="_on_CatClickDetection_mouse_exited"]
[connection signal="mouse_entered" from="BunnyKinematicBody" to="." method="_on_BunnyClickDetection_mouse_entered"]
[connection signal="mouse_exited" from="BunnyKinematicBody" to="." method="_on_BunnyClickDetection_mouse_exited"]
